fixed layout issues

--- a/src/Content.css
+++ b/src/Content.css
@@ -25,7 +25,7 @@
   /*height: 100px;*/
   /*min-width: 100% !important;*/
 
-  /*min-width: 720px;*/
+  min-width: 600px;
   display: inherit;
 }
 
@@ -60,7 +60,7 @@
 .Content{
 /*  display: inline-block;
   white-space: nowrap;*/
-  position: -webkit-sticky;
+  /*position: -webkit-sticky;*/
   position: sticky;
   margin-top: 35px;
   /*top: 35px;*/
